Avoid the automatic zoom-in on input fields on mobile

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -51,3 +51,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+input,
+textarea {
+  font-size: initial;
+}
